--- a/Changes
+++ b/Changes
@@ -1,5 +1,5 @@
 Revision history for SHARYANTO-TableSpec
 
-1.0.0   2014-03-27 (SHARYANTO) (not yet released)
+1.0.0   2014-03-27 (SHARYANTO)
 
         - First version.
