--- a/lib/SHARYANTO/TableSpec.pod
+++ b/lib/SHARYANTO/TableSpec.pod
@@ -61,7 +61,7 @@ A DefHash.
 
 =head2 Properties
 
-=head3 schema => STR|ARRAY
+=head3 schema* => STR|ARRAY
 
 L<Sah> schema. This property is required.
 
@@ -77,15 +77,20 @@ From DefHash. Field longer description.
 
 From DefHash.
 
-=head3 index => INT
+=head3 pos => INT
 
 Specify the order of field. Must start from 0 and be contiguous.
 
-=head3 sortable => BOOL
+=head2 req => BOOL (default: 0)
+
+Whether this field is mandatory to be present. If 0, then function can choose to
+omit the field.
+
+=head3 sortable => BOOL (default: 1)
 
 Specify whether this field can be sorted.
 
-=head3 filterable => BOOL
+=head3 filterable => BOOL (default: 1)
 
 Specify whether this field can be used as a filter.
 
