--- a/Changes
+++ b/Changes
@@ -2,6 +2,8 @@ Revision history for SHARYANTO-TableSpec
 
 1.0.2   2014-04-27 (SHARYANTO)
 
+        - No spec changes.
+
         - Add Sah::Schema::TableSpec.
 
 
