Rename dist {SHARYANTO-,}TableSpec

--- a/Changes
+++ b/Changes
@@ -1,4 +1,11 @@
-Revision history for SHARYANTO-TableSpec
+Revision history for TableSpec
+
+1.0.3   2014-04-27 (SHARYANTO)
+
+        - No spec changes.
+
+        - Rename dist {SHARYANTO-,}TableSpec.
+
 
 1.0.2   2014-04-27 (SHARYANTO)
 
