Introduce include_by_default field property

--- a/lib/TableDef.pod
+++ b/lib/TableDef.pod
@@ -95,4 +95,14 @@ Specify whether this field can be sorted.
 
 Specify whether this field can be used as a filter.
 
+=head3 include_by_default => BOOL (default: 1)
+
+This specifies that this field should be shown or included on "default view".
+What default view is will depend on the context or implementation. Usually you
+can set this to 0 if the field content is too long or wide. For example, in Perl
+module L<Perinci::Sub::Gen::AccessTable>, if you give C<< detail => 1 >> to the
+generated function, it will include all fields except fields that has this
+property set to 0. To include such fields, you'll need to explicitly issue C<<
+with.FIELDNAME => 1 >>.
+
 =cut
