--- a/Changes
+++ b/Changes
@@ -1,5 +1,10 @@
 Revision history for TableDef
 
+1.0.4   2014-06-29 (SHARYANTO)
+
+        - Introduce field property 'include_by_default'.
+
+
 1.0.3   2014-04-27 (SHARYANTO)
 
         - No spec changes.
