--- a/Changes
+++ b/Changes
@@ -1,5 +1,14 @@
 Revision history for TableDef
 
+1.0.6   2015-09-06 (PERLANCAR)
+
+	- No spec changes.
+
+	- [dist] Move spec prereqs from RuntimeRequires to
+	  DevelopRecommends to reduce deps but still allow indicating spec
+	  requirement.
+
+
 1.0.5   2014-09-20 (PERLANCAR)
 
 	- Add field spec property: unique.
