--- a/Changes
+++ b/Changes
@@ -1,3 +1,10 @@
+1.0.9   2023-05-15  Released-By: PERLANCAR; Urgency: low
+
+        - No spec changes.
+
+        - Mention/link to DefHash.
+
+
 1.0.8   2017-03-10  Released-By: PERLANCAR
 
 	- No spec changes.
